--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -2,8 +2,8 @@
   color: #fff;
 }
 .dropdown-menu[data-bs-popper] {
-  right: 0;
-  left: unset;
+  right: 0 !important;
+  left: unset !important;
 }
 
 .header-flex {
