--- a/src/assets/scss/pagination.scss
+++ b/src/assets/scss/pagination.scss
@@ -3,6 +3,11 @@
 }
 
 .pagination-section {
+  .page-item {
+    min-width: 40px;
+    max-width: 40px;
+  }
+
   a {
     -webkit-user-select: none; /* Safari */
     -ms-user-select: none; /* IE 10 and IE 11 */
@@ -10,6 +15,8 @@
 
     &.page-link {
       display: block;
+      text-align: center;
+
       &.disabled {
         background-color: #f5f3f3 !important;
 
