--- a/src/assets/scss/templates.scss
+++ b/src/assets/scss/templates.scss
@@ -19,13 +19,18 @@
 .table-container {
   min-height: calc(472px + 1rem);
 }
-.template-view-container {
+.template-view-section {
   .table-container {
-    border: 1px solid #ddd;
+    // border: 1px solid #ddd;
     margin-bottom: 20px;
-    padding: 15px;
+    // padding: 15px;
     table {
+      border: 1px solid #ddd;
       margin-bottom: 0px;
+      th,
+      td {
+        border: 1px solid #ddd;
+      }
     }
   }
 }
