--- a/src/assets/scss/templates.scss
+++ b/src/assets/scss/templates.scss
@@ -17,15 +17,17 @@
 }
 
 .table-container {
-  min-height: calc(472px + 1rem);
+  min-height: calc(600px + 1rem);
+  // max-height: calc(600px + 1rem);
+  // overflow-y: auto;
 }
 .template-view-section {
   .table-container {
-    // border: 1px solid #ddd;
+    // border-bottom: 1px solid #ddd;
     margin-bottom: 20px;
     // padding: 15px;
     table {
-      border: 1px solid #ddd;
+      // border: 1px solid #ddd;
       margin-bottom: 0px;
       th,
       td {
