--- a/src/assets/scss/combined.scss
+++ b/src/assets/scss/combined.scss
@@ -21,10 +21,16 @@
 }
 
 .section-container {
-  margin-bottom: 15px;
   .combined-section {
     border: 1px solid #000;
     padding: 5px;
+    min-height: 540px;
+    .combined-inner-wrapper {
+      min-height: 503px;
+      &.has-pagination {
+        min-height: 490px;
+      }
+    }
   }
   .pagination-section {
     padding-left: 30px;
@@ -33,7 +39,7 @@
 .note-section {
   border: 1px solid #000;
   padding: 5px;
-  height: 545px;
+  height: 540px;
   overflow-y: auto;
 
   .note-container {
