--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -94,6 +94,7 @@ table {
         align-items: center;
         text-align: left;
         padding: 3px 0px;
+        white-space: nowrap;
       }
     }
   }
