--- a/src/assets/scss/compare_combined.scss
+++ b/src/assets/scss/compare_combined.scss
@@ -34,6 +34,9 @@
           &.product_name {
             flex: 1;
           }
+          &:hover {
+            cursor: not-allowed;
+          }
         }
       }
     }
