--- a/src/assets/scss/combined.scss
+++ b/src/assets/scss/combined.scss
@@ -11,10 +11,15 @@
       height: 25px;
     }
     input {
+      background-color: #ffffff;
+      border: 0;
       margin-right: 1%;
       width: 15% !important;
       &.product_name {
         flex: 1;
+      }
+      &:hover {
+        cursor: not-allowed;
       }
     }
   }
@@ -22,13 +27,14 @@
 
 .section-container {
   .combined-section {
+    background-color: #ebd98b;
     border: 1px solid #000;
     padding: 5px;
     min-height: 540px;
     .combined-inner-wrapper {
       min-height: 503px;
       &.has-pagination {
-        min-height: 490px;
+        min-height: 461px;
       }
     }
   }
