--- a/src/assets/scss/pagination.scss
+++ b/src/assets/scss/pagination.scss
@@ -17,6 +17,7 @@
     &.page-link {
       display: block;
       text-align: center;
+      white-space: nowrap;
 
       &.disabled {
         background-color: #f5f3f3 !important;
