--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -46,7 +46,8 @@ main {
 @media (min-width: 768px) {
   .main-container {
     .main-wrapper {
-      width: calc(100% - 200px);
+      // width: calc(100% - 200px);
+      width: calc(100% - 50px);
     }
   }
 }
