--- a/src/assets/scss/templates.scss
+++ b/src/assets/scss/templates.scss
@@ -2,6 +2,12 @@
   max-width: 800px;
   margin: 0 auto;
 
+  .card-title {
+    text-overflow: ellipsis;
+    text-wrap: nowrap;
+    overflow: hidden;
+  }
+
   .templates-text {
     position: relative;
 
@@ -111,8 +117,56 @@
 
   .content-manager-per-supervisor {
     border: 1px solid #ddd;
-    padding: 10px;
-    padding-bottom: 0px;
+    padding: 0px;
     margin-bottom: 10px;
+  }
+}
+
+.forms-containers {
+  select {
+    width: 250px;
+    min-width: 250px;
+    max-width: 250px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
+
+.forms-edit-containers {
+  label {
+    white-space: nowrap;
+  }
+  select {
+    width: 101px;
+    min-width: 101px;
+    max-width: 101px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
+
+.accordion-header {
+  outline: none;
+  .accordion-button {
+    outline: none;
+  }
+}
+.accordion-item {
+  border: 0;
+}
+.accordion-item:first-of-type .accordion-button {
+  outline: none;
+  box-shadow: none;
+  border-radius: 0;
+}
+
+.form-create-section {
+  select {
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
+  }
+  .template-upper-section {
+    min-height: calc(83px + 1rem);
   }
 }
